--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -48,3 +48,11 @@ stelios3g:
   email: "p16gavr1@ionio.gr"
   twitter: ""
 #
+#
+nkatertzis:
+  name: "Nikos Katertzis"
+  siterole: ""
+  uri: ""
+  email: "std123913@ac.eap.gr"
+  twitter: ""
+#
